k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fp-frontend
  namespace: default
  labels:
    app: fp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fp-frontend
  template:
    metadata:
      labels:
        app: fp-frontend
    spec:
      containers:
        - name: fp-frontend
          image: moabdelazem/fp_frontend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fp-frontend
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: fp-frontend
